Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7499

System variables have broken default values on big endian

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.2
    • 10.1.3
    • Platform Power
    • None

    Description

      This causes test failures like following:

      CURRENT_TEST: sys_vars.sysvars_server_notembedded
      --- /home/buildbot/maria-slave/power8-vlp01-bintar-debug/build/mysql-test/suite/sys_vars/r/sysvars_server_notembedded.result	2015-01-13 11:51:03.528853400 -0500
      +++ /home/buildbot/maria-slave/power8-vlp01-bintar-debug/build/mysql-test/suite/sys_vars/r/sysvars_server_notembedded.reject	2015-01-22 19:30:28.333289927 -0500
      @@ -39,7 +39,7 @@
       SESSION_VALUE	NULL
       GLOBAL_VALUE	ON
       GLOBAL_VALUE_ORIGIN	COMPILE-TIME
      -DEFAULT_VALUE	ON
      +DEFAULT_VALUE	OFF
       VARIABLE_SCOPE	GLOBAL
       VARIABLE_TYPE	BOOLEAN
       VARIABLE_COMMENT	Creating and dropping stored procedures alters ACLs
      @@ -221,7 +221,7 @@
       SESSION_VALUE	NULL
       GLOBAL_VALUE	ON
       GLOBAL_VALUE_ORIGIN	COMPILE-TIME
      -DEFAULT_VALUE	ON
      +DEFAULT_VALUE	OFF
       VARIABLE_SCOPE	GLOBAL
       VARIABLE_TYPE	BOOLEAN
       VARIABLE_COMMENT	Run fast part of group commit in a single thread, to optimize kernel thread scheduling. On by default. Disable to run each transaction in group commit in its own thread, which can be slower at very high concurrency. This option is mostly for testing one algorithm versus the other, and it should not normally be necessary to change it.
      @@ -1593,7 +1593,7 @@
       SESSION_VALUE	NULL
       GLOBAL_VALUE	ON
       GLOBAL_VALUE_ORIGIN	CONFIG
      -DEFAULT_VALUE	ON
      +DEFAULT_VALUE	OFF
       VARIABLE_SCOPE	GLOBAL
       VARIABLE_TYPE	BOOLEAN
       VARIABLE_COMMENT	Enable LOAD DATA LOCAL INFILE

      The problem is that some default values are stored as long long and loaded as int.

      Attachments

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.